# experimento-juvenal

./: .gitignore  1-tickers.ipynb  2-treinamento.ipynb  README.md  pyproject.toml
